--- a/system/app/Widgets/Quote/views/form.quote.phtml
+++ b/system/app/Widgets/Quote/views/form.quote.phtml
@@ -136,7 +136,7 @@ $websiteConfig = Zend_Controller_Action_HelperBroker::getExistingHelper('config'
                 beforeSend: showLoader('Sending quote...')
             }).done(function(response) {
                 hideLoader();
-                var formMessage = '<?php echo $this->translate('Thank you for submitting a quote request. We will get back to you shortly - You will shortly be redirected to our homepage');?>';
+                var formMessage = "<?php echo $this->translate('Thank you for submitting a quote request. We will get back to you shortly - You will shortly be redirected to our homepage');?>";
                 if(typeof response.error !== "undefined"){
                     showMessage(formMessage, false, 5000);
                     return false;
