--- a/system/app/Widgets/Quote/views/grid.quote.phtml
+++ b/system/app/Widgets/Quote/views/grid.quote.phtml
@@ -43,10 +43,10 @@
     <div id="quote-grid">
         <div id="quote-grid-top" class="quote-grid-block mt20px mb20px clearfix">
             <div class="grid_5 alpha flex-row border-box">
-                <span class="grid_12 alpha omega t-grid_3 t-alpha search-block-element mb5px">
+                <span class="flex_12 f-alpha f-omega t-flex_3 t-alpha search-block-element mb5px">
                     <?php echo $this->formText('search', '', array('id' => 'quote-grid-search','class' => 'search-input', 'placeholder' => $this->translate('search quote by title, by creator, by client email & name'))); ?>
                 </span>
-                <div class="grid_4 alpha t-grid_3 t-alpha">
+                <div class="flex_4 f-alpha t-flex_3 t-omega">
                     <select name="quote-owner-name" id="quote-owner-name">
                         <option selected="selected" value=""><?php echo $this->translate('filter by owner');?></option>
                         <?php if(!empty($this->ownerRoles)) :?>
@@ -56,7 +56,7 @@
                         <?php endif;?>
                     </select>
                 </div>
-                <div class="grid_4 t-grid_3 t-omega">
+                <div class="flex_4 t-flex_3 t-alpha">
                     <select name="quote-status-name" id="quote-status-name">
                         <option selected="selected" value=""><?php echo $this->translate('filter by status');?></option>
                         <option value="<?php echo Quote_Models_Model_Quote::STATUS_NEW;?>"><?php echo $this->translate('Quote New');?></option>
@@ -66,7 +66,7 @@
                         <option value="<?php echo Quote_Models_Model_Quote::STATUS_LOST;?>"><?php echo $this->translate('Lost opportunity');?></option>
                     </select>
                 </div>
-                <a href="javascript:;" id="search-quote-button" class="btn green grid_4 omega"><?php echo $this->translate('Search Quote');?></a>
+                <a href="javascript:;" id="search-quote-button" class="btn green flex_4 f-omega t-flex_3 t-omega"><?php echo $this->translate('Search Quote');?></a>
                 <?php $quoteTemplates = array_merge(
                     array(0 => 'Select quote template'),
                     Tools_System_Tools::getTemplatesHash(Quote_Models_Model_Quote::TEMPLATE_TYPE_QUOTE)
