Adjust redirect to have conversion

--- a/system/app/Widgets/Quote/views/form.quote.phtml
+++ b/system/app/Widgets/Quote/views/form.quote.phtml
@@ -142,7 +142,9 @@ $websiteConfig = Zend_Controller_Action_HelperBroker::getExistingHelper('config'
                     return false;
                 }
                 if($(form).hasClass('_reload') && (response instanceof Object)) {
-                    window.location.href = response.id + '.html';
+                        //window.location.href = response.id + '.html';
+                        document.location.href = $('#website_url').val() + 'plugin/quote/run/thankyou/quoteId/'+response.id+'/quoteRedirect/1/';
+                       //window.location.href = response.id + '.html';
                 } else {
                     showMessage(formMessage, false, 5000);
                     setTimeout(() => {
