Add deep quote search

--- a/system/app/Widgets/Quote/views/grid.quote.phtml
+++ b/system/app/Widgets/Quote/views/grid.quote.phtml
@@ -74,7 +74,7 @@
             </div>
             <div class="flex-row-quote-buttons grid_7 alpha omega border-box">
                 <div class="btn-group">
-                    <button class="quote-create-option-button btn checked-btn"
+                    <button class="quote-create-option-button quote-create-option-button-default-load btn checked-btn"
                             name="quote-create-option-button-create" data-checked="true"
                             data-type="create_new_quote"><?php echo $this->translate('Create a new quote'); ?></button>
                     <button class="quote-create-option-button btn"
