--- a/system/app/Widgets/Quote/views/grid.quote.phtml
+++ b/system/app/Widgets/Quote/views/grid.quote.phtml
@@ -85,6 +85,7 @@
                 <input class="hidden" id="search-quote-duplicate" name="search-quote-duplicate" placeholder="<?php echo $this->translate('Search by quote title');?>" />
                 <input type="text" id="quote-title-original" class="search-quote-title-original" placeholder="<?php echo $this->translate('Quote title');?>" />
                 <input class="hidden" id="duplicate-quote-id" name="duplicate-quote-id">
+                <input class="hidden" id="quote-amp-hook" name="quote-amp-hook" value="<?php echo Api_Quote_Quotes::AMP_SYMBOL_HOOK;?>">
                 <input id="quote-chosen-type" class="quote-chosen-type" type="hidden" name="quote-chosen-type" value="">
 
                 <a class="quote-grid-add btn green" href="javascript:;" title="<?php echo $this->translate('Create Quote');?>"><?php echo $this->translate('Create Quote');?></a>
