Add dynamic change for opportunity send quote

--- a/system/views/save-and-send-content.phtml
+++ b/system/views/save-and-send-content.phtml
@@ -9,7 +9,7 @@
                 <?php echo $this->translate('Process opportunity')?>
                 <input type="checkbox" name="process-opportunity" id="process-opportunity" checked />
             </label>
-            <div class="flex_8 flex-row f-middle f-omega">
+            <div class="flex_8 flex-row f-middle f-omega opportunity-processing-block">
                 <label class="flex_6 mb0px">
                     <?php echo $this->translate('Select opportunity stage');?>:
                 </label>
@@ -22,7 +22,7 @@
                     <?php endforeach;?>
                 </select>
             </div>
-            <label class="mt10px flex_4 f-alpha">
+            <label class="mt10px flex_4 f-alpha opportunity-processing-block">
                 <?php echo $this->translate('Re-process opportunity')?>
                 <input type="checkbox" name="reprocessOpportunity" id="re-process-opportunity" />
             </label>
