--- a/system/app/Widgets/Quote/views/grid.quote.phtml
+++ b/system/app/Widgets/Quote/views/grid.quote.phtml
@@ -120,8 +120,8 @@
                             data-type="create_quote_duplicate"><?php echo $this->translate('Create quote from a template'); ?></button>
                 </div>
 
-                <div class="search-block-element-autocomplete">
-                    <input class="hidden search-input-autocomplete" id="search-quote-duplicate" name="search-quote-duplicate" placeholder="<?php echo $this->translate('Search by quote title');?>" />
+                <div class="search-block-element-autocomplete hidden">
+                    <input class="search-input-autocomplete" id="search-quote-duplicate" name="search-quote-duplicate" placeholder="<?php echo $this->translate('Search by quote title');?>" />
                     <span class="ticon-cancel-search clear-input-autocomplete hidden"></span>
                 </div>
                 <input type="text" id="quote-title-original" class="search-quote-title-original" placeholder="<?php echo $this->translate('Quote title');?>" />
