--- a/system/views/save-and-send-content.phtml
+++ b/system/views/save-and-send-content.phtml
@@ -5,15 +5,8 @@
     </p>
     <?php if (!empty($this->opportunityStages)):?>
         <div class="flex-row f-middle">
-            <label class="flex_4 f-alpha mb0px">
-                <?php echo $this->translate('Process opportunity')?>
-                <input type="checkbox" name="process-opportunity" id="process-opportunity" checked />
-            </label>
             <div class="flex_8 flex-row f-middle f-omega opportunity-processing-block">
-                <label class="flex_6 mb0px">
-                    <?php echo $this->translate('Select opportunity stage');?>:
-                </label>
-                <select name="stageId" id="email-opportunity-stage-id" class="flex_6 f-omega">
+                <select name="stageId" id="email-opportunity-stage-id" class="flex_6 f-omega hidden">
                     <option value="0"><?php echo $this->translate('Select opportunity stage');?></option>
                     <?php foreach ($this->opportunityStages as $opportunityId => $opportunityStage) :?>
                         <?php if (!in_array($opportunityId, array(1, 100))):?>
@@ -22,11 +15,6 @@
                     <?php endforeach;?>
                 </select>
             </div>
-            <label class="mt10px flex_4 f-alpha opportunity-processing-block">
-                <?php echo $this->translate('Re-process opportunity')?>
-                <input type="checkbox" name="reprocessOpportunity" id="re-process-opportunity" />
-            </label>
-
         </div>
     <?php endif;?>
 </div>
