--- a/system/app/Widgets/Quote/views/grid.quote.phtml
+++ b/system/app/Widgets/Quote/views/grid.quote.phtml
@@ -78,7 +78,7 @@
             ->appendStylesheet($this->websiteUrl . 'system/css/reset-widgets.css');
     ?>
     <div id="quote-grid">
-        <div id="quote-grid-top" class="quote-grid-block mt20px mb20px clearfix">
+        <div id="quote-grid-top" class="quote-grid-block mb20px clearfix">
             <div class="grid_5 alpha flex-row border-box">
                 <span class="flex_12 f-alpha f-omega t-flex_3 t-alpha search-block-element mb5px">
                     <?php echo $this->formText('search', '', array('id' => 'quote-grid-search','class' => 'search-input', 'placeholder' => $this->translate('search quote by title, by creator, by client email & name'))); ?>
