--- a/system/views/settings.quote.phtml
+++ b/system/views/settings.quote.phtml
@@ -44,7 +44,11 @@
                 <?php echo $this->form->getElement('quoteEmailsNotifications')->renderViewHelper(); ?>
             </p>
             <p class="grid_12 alpha omega">
-                <?php echo $this->form->getElement('enableSpamVerification')->renderLabel(); ?>
+                <label for="enable-spam-verification" class="grid_6 optional"><?php echo $this->translate('Enable AI Anti-Spam verification');?>
+                    <a href="https://help.seosamba.com/seosamba-ai-anti-spam-bot.html" target="_blank" class="ticon-info tooltip icon18" title="<?php echo $this->translate('Learn more about SeoSamba AI Anti-Spam Bot');?>"></a>
+                </label>
+                <?php //echo $this->form->getElement('enableSpamVerification')->renderLabel(); ?>
+
                 <?php echo $this->form->getElement('enableSpamVerification')->renderViewHelper(); ?>
             </p>
             <!--        <p>-->
