--- a/system/app/Widgets/Quote/views/form.quote.phtml
+++ b/system/app/Widgets/Quote/views/form.quote.phtml
@@ -133,9 +133,9 @@ $websiteConfig = Zend_Controller_Action_HelperBroker::getExistingHelper('config'
                 url: $(form).attr('action'),
                 data: $(form).serialize(),
                 dataType: 'json',
-                beforeSend: showLoader('Sending quote...')
+                beforeSend: showSpinner('#plugin-quote-quoteform', 'quote-form-spinner-block system-spinner', 'Thank you for submitting a quote request. Please wait quote will be processed soon...')
             }).done(function(response) {
-                hideLoader();
+                hideSpinner('quote-form-spinner-block');
                 var formMessage = "<?php echo $this->translate('Thank you for submitting a quote request. We will get back to you shortly - You will shortly be redirected to our homepage');?>";
                 if(typeof response.error !== "undefined"){
                     showMessage(formMessage, false, 5000);
