--- a/system/app/Widgets/Quote/views/form.quote.phtml
+++ b/system/app/Widgets/Quote/views/form.quote.phtml
@@ -162,7 +162,7 @@ $websiteConfig = Zend_Controller_Action_HelperBroker::getExistingHelper('config'
                     }, "5000")
                 }
             }).fail(function(response) {
-                hideLoader();
+                hideSpinner('quote-form-spinner-block');
                 var msg = '';
                 <?php if(Tools_Security_Acl::isAllowed(Tools_Security_Acl::RESOURCE_PLUGINS)):?>
                     var msg = '<a class="quote-fail-lnk" target="_blank" href="http://www.seotoaster.com/web-site-quote-system-software-tool.html"><?php echo $this->translate("Learn more")?></a>';
