--- a/system/app/Widgets/Quote/views/form.quote.phtml
+++ b/system/app/Widgets/Quote/views/form.quote.phtml
@@ -130,13 +130,14 @@ $websiteConfig = Zend_Controller_Action_HelperBroker::getExistingHelper('config'
 
             formData = $(form).serialize() + '&quotePageId='+$('#quote-page-id').val();
             //console.log($(form).serialize()); return false;
+            var formMessageThx = "<?php echo $this->translate('Thank you for submitting a quote request. Please wait, the quote will be processed soon...');?>";
 
             $.ajax({
                 type: 'post',
                 url: $(form).attr('action'),
                 data: formData,
                 dataType: 'json',
-                beforeSend: showSpinner('#plugin-quote-quoteform', 'quote-form-spinner-block', 'Thank you for submitting a quote request. Please wait, the quote will be processed soon...', 'spinner-opacity-medium')
+                beforeSend: showSpinner('#plugin-quote-quoteform', 'quote-form-spinner-block', formMessageThx, 'spinner-opacity-medium')
             }).done(function(response) {
                 hideSpinner('.quote-form-spinner-block');
                 var formMessage = "<?php echo $this->translate('Thank you for submitting a quote request. We will get back to you shortly - You will shortly be redirected to our homepage');?>";
