--- a/system/app/Widgets/Quote/views/item/options.quote.item.phtml
+++ b/system/app/Widgets/Quote/views/item/options.quote.item.phtml
@@ -1,8 +1,14 @@
 <?php if(!empty($this->options)): ?>
 	<?php $currOpts = array();?>
     <?php foreach($this->options as $title => $optData):?>
-        <?php $hideDefaultOption = $optData['hideDefaultOption'];?>
-        <?php $isDefault = $optData['isDefault'];?>
+        <?php $hideDefaultOption = '';?>
+        <?php if(!empty($optData['hideDefaultOption'])) :?>
+            <?php $hideDefaultOption = $optData['hideDefaultOption'];?>
+        <?php endif;?>
+        <?php $isDefault = '';?>
+        <?php if(!empty($optData['isDefault'])) :?>
+            <?php $isDefault = $optData['isDefault'];?>
+        <?php endif;?>
         <?php $hideOption = false;?>
         <?php if ($isDefault == '1' && $hideDefaultOption == '1'):?>
             <?php $hideOption = true;?>
