Change seosamba-ai-anti-spam-bot tooltip

--- a/system/views/settings.quote.phtml
+++ b/system/views/settings.quote.phtml
@@ -57,7 +57,7 @@
             </p>
             <p class="grid_12 alpha omega">
                 <label for="enable-spam-verification" class="grid_6 optional"><?php echo $this->translate('Enable AI Anti-Spam verification');?>
-                    <a href="https://help.seosamba.com/seosamba-ai-anti-spam-bot.html" target="_blank" class="ticon-info tooltip icon18" title="<?php echo $this->translate('Learn more about SeoSamba AI Anti-Spam Bot');?>"></a>
+                    <a href="https://help.seosamba.com/seosamba-ai-anti-spam-bot.html" target="_blank" class="ticon-info tooltip icon18" title="<?php echo $this->translate('Learn more about SeoSamba AI Anti-Spam Bot (To enable this verification please sign up for SeoSamba MOS)');?>"></a>
                 </label>
                 <?php //echo $this->form->getElement('enableSpamVerification')->renderLabel(); ?>
 
