Enable "quoteDraggableProducts" by default

--- a/system/views/settings.quote.phtml
+++ b/system/views/settings.quote.phtml
@@ -78,7 +78,7 @@
                     <?php echo $this->form->getElement('disableAutosaveEmail')->renderViewHelper(); ?>
                 </p>
             </fieldset>
-            <p class="grid_12 alpha omega">
+            <p class="grid_12 alpha omega hidden">
                 <?php echo $this->form->getElement('quoteDraggableProducts')->renderLabel(); ?>
                 <?php echo $this->form->getElement('quoteDraggableProducts')->renderViewHelper(); ?>
             </p>
