Improve quote grid rendering speed. Refactor quote mapper

--- a/system/app/Widgets/Quote/views/grid.quote.phtml
+++ b/system/app/Widgets/Quote/views/grid.quote.phtml
@@ -136,12 +136,12 @@
             <thead>
                 <tr class="ws-nowrap">
                     <th><input type="checkbox" id="quote-grid-select-all" /></th>
-                    <th data-sort="id" class="sortable"><?php echo $this->translate('Id'); ?></th>
+                    <th data-sort="s_q.id" class="sortable"><?php echo $this->translate('Id'); ?></th>
                     <th data-sort="clients" class="sortable"><?php echo $this->translate('Client'); ?></th>
-                    <th data-sort="title" class="sortable"><?php echo $this->translate('Title'); ?></th>
+                    <th data-sort="s_q.title" class="sortable"><?php echo $this->translate('Title'); ?></th>
                     <th data-sort="ownerName" class="sortable"><?php echo $this->translate('Owner'); ?></th>
-                    <th data-sort="created_at" class="sortable"><?php echo $this->translate('Date'); ?></th>
-                    <th data-sort="status" class="sortable"><?php echo $this->translate('Status'); ?></th>
+                    <th data-sort="s_q.created_at" class="sortable"><?php echo $this->translate('Date'); ?></th>
+                    <th data-sort="s_q.status" class="sortable"><?php echo $this->translate('Status'); ?></th>
                     <th><?php echo $this->translate('Preview'); ?></th>
                     <th class="text-center"><?php echo $this->translate('Remove'); ?></th>
                 </tr>
